net-policies/mediabot-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mediabot
  labels:
    org: empire
    class: mediabot
spec:
  containers:
  - name: mediabot
    image: docker.io/tgraf/netperf
